project/logs/20250426_185115.log
Use Adapter : NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create DeD12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:10:53: error: use of undeclared identifier 'input'
float32_t4 textureColor = gTexture.Sample(gSampler, input.texcoord);
                                                    ^

Compile Succeeded, path:Object3D.PS.hlsl, profile:ps_6_0

